// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentViewTest render for gettting started 1`] = `
"<div className=\\"assessmentContent\\">
  <TargetChangeDialog deps={{...}} prevTab={{...}} newTab={{...}} />
  <div className=\\"assessmentTitle\\">
    <h1 className=\\"assessmentHeader\\">
      assessment 1
       
      <ContentLink deps={{...}} reference={[Function]} iconName=\\"info\\" />
    </h1>
  </div>
  <CollapsibleComponent header={{...}} content={{...}} containerClassName=\\"assessmentGettingStartedContainer\\" />
  <AssessmentViewMainContentExtensionPoint extensions={[undefined]} assessmentTestResult={{...}}>
    <div className=\\"assessmentRequirementsTitle\\">
      <h2 className=\\"assessmentRequirements\\">
        Requirements
      </h2>
    </div>
    <div className=\\"detailsViewAssessmentContent\\">
      <GettingStartedView gettingStartedContent={{...}} />
    </div>
  </AssessmentViewMainContentExtensionPoint>
</div>"
`;

exports[`AssessmentViewTest render for requirement 1`] = `
"<div className=\\"assessmentContent\\">
  <TargetChangeDialog deps={{...}} prevTab={{...}} newTab={{...}} />
  <div className=\\"assessmentTitle\\">
    <h1 className=\\"assessmentHeader\\">
      assessment 1
       
      <ContentLink deps={{...}} reference={[Function]} iconName=\\"info\\" />
    </h1>
  </div>
  <CollapsibleComponent header={{...}} content={{...}} containerClassName=\\"assessmentGettingStartedContainer\\" />
  <AssessmentViewMainContentExtensionPoint extensions={[undefined]} assessmentTestResult={{...}}>
    <div className=\\"assessmentRequirementsTitle\\">
      <h2 className=\\"assessmentRequirements\\">
        Requirements
      </h2>
    </div>
    <div className=\\"detailsViewAssessmentContent\\">
      <div className=\\"testStepsNavContainer\\">
        <TestStepsNav deps={{...}} ariaLabel=\\"Requirements\\" selectedTest={-1} selectedTestStep=\\"assessment-1-step-1\\" stepStatus={{...}} />
      </div>
      <div className=\\"testStepViewContainer\\">
        <TestStepView deps={{...}} isScanning={false} testStep={{...}} renderStaticContent={[undefined]} instancesMap={{...}} assessmentNavState={{...}} assessmentInstanceTableHandler={{...}} manualTestStepResultMap={{...}} assessmentsProvider={{...}} isStepEnabled={false} isStepScanned={false} assessmentDefaultMessageGenerator={{...}} featureFlagStoreData={{...}} pathSnippetStoreData={{...}} />
      </div>
    </div>
  </AssessmentViewMainContentExtensionPoint>
</div>"
`;
